# yt-music-util

./: .gitignore  LICENSE  README.md  pyproject.toml
src/yt_music/: __init__.py  cli.py  converter.py  downloader.py  playlist.py  server.py
